--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
-    "request": "^2.88.0"
+    "particles-bg": "^2.5.0",
+    "particles.js": "^2.0.0",
+    "react-particles-js": "^3.2.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
